# clairvoyancex

./: README.md  pyproject.toml  requirements.txt
clairvoyancex/: __main__.py  graphql.py  oracle.py
